--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="#" class="sidebar_logo">PMP</a>
                 </div>
                 <div class="sidebar_list">
-                    <a href="#" class="sidebar_link active">
+                    <a href="https://physicsmasterpig.github.io/Page/" class="sidebar_link active">
                         <ion-icon name="home-outline" class="sidebar_icon"></ion-icon>
                         <span class="sidebar_name">Home</span>
                     </a>
@@ -51,7 +51,7 @@
                         <ion-icon name="chevron-down-outline" class="collapse_link"></ion-icon>
 
                         <ul class="collapse_menu">
-                            <a href="calculator/calculator.html" class="collapse_sublink">Tools</a>
+                            <a href="/calculator/" class="collapse_sublink">Tools</a>
                             <a href="#" class="collapse_sublink">Group</a>
                             <a href="#" class="collapse_sublink">Members</a>
                         </ul>
