--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <ion-icon name="chevron-down-outline" class="collapse_link"></ion-icon>
 
                         <ul class="collapse_menu">
-                            <a href="/calculator/" class="collapse_sublink">Tools</a>
+                            <a href="https://physicsmasterpig.github.io/Page/calculator/calculator" class="collapse_sublink">Tools</a>
                             <a href="#" class="collapse_sublink">Group</a>
                             <a href="#" class="collapse_sublink">Members</a>
                         </ul>
