--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -75,7 +75,7 @@
     <!-- IONICONS -->
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
     <!-- JS -->
-    <script src="sidebar.js"></script>
+    <script src="../sidebar.js"></script>
     <div class="container">
     <div class="calculator">
     <div class="wrapper">
