--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -26,7 +26,7 @@
                     <a href="#" class="sidebar_logo">PMP</a>
                 </div>
                 <div class="sidebar_list">
-                    <a href="#" class="sidebar_link active">
+                    <a href="https://physicsmasterpig.github.io/Page/" class="sidebar_link active">
                         <ion-icon name="home-outline" class="sidebar_icon"></ion-icon>
                         <span class="sidebar_name">Home</span>
                     </a>
