--- a/group_projects/group_projects.html
+++ b/group_projects/group_projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 
     <title>Main Page</title>
 </head>
@@ -76,7 +76,7 @@
     <!-- IONICONS -->
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
     <!-- JS -->
-    <script src="sidebar.js"></script>
+    <script src="../sidebar.js"></script>
 
     <div class="container">
         Hello   
